<resources>
    <string name="app_name">IBAN Account and Digital Accs</string>
    <string name="succesfull">Added!</string>
    <string name="failed">Failed!</string>
    <string name="bank_name">Bank Account</string>
    <string name="iban_number">IBAN Number</string>
    <string name="currency">Currency</string>
    <string name="confirm_button">Confirm</string>
    <string name="website_name">Website/Application Name</string>
    <string name="website_username">Username</string>
    <string name="website_password">Password</string>

    <string name="addlanding_message"><u> Account Type</u></string>
    <string name="addlanding_information"><u>Account Information</u></string>
    <string name="addlanding_icon"><u>Icon</u></string>

    <string name="website_checkbox">Website / Application</string>
    <string name="bankaccount_checkbox">Bank Account</string>
    <string name="bankcard_checkbox">Bank Card</string>

    <string name="item_copy">Copy</string>
    <string name="item_delete">Delete</string>
    <string name="import_button">Import</string>
    <string name="export_button">Export</string>
    <string name="copy_ad"><u>This information is stored by the Account Box application. \n Website: bit.ly/accountbox</u></string>
    <string name="copied"><u>Your information has been copied.</u></string>
</resources>